fixed footer alignment for mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1568,12 +1568,7 @@ section {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    width: 100%;
   }
   .footer-column {
     width: 100%;
