--- a/sass/sections/_footer.sass
+++ b/sass/sections/_footer.sass
@@ -113,8 +113,7 @@
   .footer
     &-links
       flex-direction: column
-      align-items: start
-      justify-content: flex-start
+      width: 100%
     &-column
       width: 100%
       &__title
